# crosstalk

./: .gitignore  README.md  pyproject.toml
src/crosstalk/: __init__.py  cli.py  coordinator.py  logger.py  models.py
src/crosstalk/agents/: __init__.py  base.py  claude.py  codex.py
src/crosstalk/personas/: __init__.py  architect.md  critic.md  default.md  implementer.md
